--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -58,3 +58,25 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.float-right {
+    float: right;
+}
+
+.flex-auto {
+    flex: auto;
+}
+
+.border-bottom {
+    border-bottom: 1px solid #0000001F;
+}
+
+.py-0 {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+}
+
+.my-auto {
+    margin-top: auto !important;
+    margin-bottom: auto !important;
+}
