Update text copy

--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -113,7 +113,7 @@ tr.group-header-row {
     background-color: #FFFAEA;
 }
 
-.alchol-label {
+.alcohol-label {
     font-size: 10px !important;
     line-height: 2 !important;
 }
